--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,7 +6,7 @@
     "bcryptjs": "^2.4.3",
     "bookshelf": "^0.13.3",
     "bookshelf-cascade-delete": "^2.0.1",
-    "fastify": "^1.0.0-rc.3",
+    "fastify": "^1.4.0",
     "fastify-formbody": "^2.0.0",
     "fastify-helmet": "^1.0.3",
     "glob": "^7.1.2",
