--- a/Backend/config.json
+++ b/Backend/config.json
@@ -8,5 +8,20 @@
   "http": {
     "port": 80
   },
+  "emulator": {
+    "camera": {
+      "username": "Chris",
+      "password": ""
+    },
+    "game": {
+      "host": "127.0.0.1",
+      "port": 300
+    },
+    "rcon": {
+      "host": "127.0.0.1",
+      "port": 3000,
+      "allowed": "0.0.0.0"
+    }
+  },
   "jwt": "@#%FZLZLL@$gfoOSOOSLQWED"
 }
