--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "mysql2": "^1.5.3",
     "objection": "^1.1.8",
     "objection-password-bcryptjs": "^1.0.0-a",
-    "objection-unique": "^1.0.1"
+    "objection-unique": "^1.0.1",
+    "objection-visibility": "^0.2.0"
   },
   "devDependencies": {
+    "babel-plugin-root-import": "^5.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.1"
   },
@@ -35,7 +37,8 @@
       ]
     ],
     "plugins": [
-      "transform-class-properties"
+      "transform-class-properties",
+      "babel-plugin-root-import"
     ],
     "ignore": [
       "src/public/**/*.js"
