--- a/app/web/routes/cms-settings.json
+++ b/app/web/routes/cms-settings.json
@@ -1,11 +1,16 @@
 {
-  "prefix": "system",
+  "prefix": "system/cms",
   "controller": "cms-settings",
   "routes": [
     {
-      "link": "cms",
+      "link": "",
       "method": "GET",
       "controller": "read"
+    },
+    {
+      "link": "",
+      "method": "PATCH",
+      "controller": "update"
     }
   ]
 }
