--- a/source/package.json
+++ b/source/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.16.3",
+    "express-reload": "^1.1.0",
     "fastify": "^1.4.0",
+    "fastify-formbody": "^2.0.0",
     "glob": "^7.1.2",
     "glob-promise": "^3.4.0",
     "jsonwebtoken": "^8.2.1",
