Baby its trueeee two is better than one!

--- a/source/app/web/routes/cms-settings.json
+++ b/source/app/web/routes/cms-settings.json
@@ -10,7 +10,8 @@
     {
       "link": "",
       "method": "PATCH",
-      "controller": "update"
+      "controller": "update",
+      "middleware": "Session"
     }
   ]
 }
