--- a/source/package.json
+++ b/source/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.4",
     "fastify": "^1.4.0",
     "fastify-formbody": "^2.0.0",
+    "fastify-helmet": "^1.0.3",
     "glob": "^7.1.2",
     "glob-promise": "^3.4.0",
     "jsonwebtoken": "^8.2.1",
