--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,7 @@
+#Heroic
+ssl.cert.pem
+ssl.key.pem
 
-# Created by https://www.gitignore.io/api/macos
-
-### macOS ###
-# General
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Icon must end with two \r
-Icon
-
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-
-
-# End of https://www.gitignore.io/api/macos
-
-
-# Created by https://www.gitignore.io/api/node
-
-### Node ###
 # Logs
 logs
 *.log
@@ -109,10 +75,3 @@ typings/
 
 # Serverless directories
 .serverless
-
-
-# End of https://www.gitignore.io/api/node
-
-
-# Heroic 
-Production/
