Web Workers - Routing - SQL Interaction
Summary
- Web routing has been added and differs from previous versions.  Instead of seperate .json files its now in one singular routes.js file which will call a Web server function to set it up similar to Laravel style on PHP

- Fixed the interactor for the users function base

- Modified packages to add standard to dependencies

- Added web workers which is configured in the `config/system.json`

--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "nodemon -L --exec babel-node index.js",
-    "clean": "standard --fix --parser babe-eslint"
+    "test": "nodemon -L --exec babel-node index.js"
   },
   "repository": {
     "type": "git",
@@ -26,13 +25,13 @@
     "fastify": "^1.9.0",
     "knex": "^0.15.2",
     "mysql2": "^1.6.1",
-    "objection": "^1.2.2"
+    "objection": "^1.2.2",
+    "objection-visibility": "^0.3.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-plugin-root-import": "^6.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-env": "^1.7.0",
-    "nodemon": "^1.18.3"
+    "babel-preset-env": "^1.7.0"
   }
 }
