--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,18 +9,20 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "eslint": "^5.4.0",
     "jwt-decode": "^2.2.0",
     "moment": "^2.22.2",
+    "swfobject": "^2.2.1",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-rc.12",
-    "@vue/cli-plugin-eslint": "^3.0.0-rc.12",
-    "@vue/cli-service": "^3.0.0-rc.12",
-    "@vue/eslint-config-standard": "^3.0.0-rc.12",
-    "lint-staged": "^7.2.0",
+    "@vue/cli-plugin-babel": "^3.0.1",
+    "@vue/cli-plugin-eslint": "^3.0.1",
+    "@vue/cli-service": "^3.0.1",
+    "@vue/eslint-config-standard": "^3.0.1",
+    "lint-staged": "^7.2.2",
     "vue-template-compiler": "^2.5.16"
   },
   "eslintConfig": {
@@ -29,10 +31,9 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
+      "plugin:vue/strongly-recommended",
       "@vue/standard"
     ],
-    "rules": {},
     "parserOptions": {
       "parser": "babel-eslint"
     }
