--- a/api/package.json
+++ b/api/package.json
@@ -32,6 +32,7 @@
     "objection": "^1.2.2",
     "objection-password-bcryptjs": "^1.0.0-a",
     "objection-visibility": "^0.3.2",
+    "randomstring": "^1.1.5",
     "request-ip": "^2.1.1",
     "validator": "^10.6.0"
   },
