--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,8 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "nodemon -L --exec babel-node index.js"
+    "test": "nodemon -L --exec babel-node index.js",
+    "build": "babel . --out-dir=../build --copy-files --ignore node_modules"
   },
   "repository": {
     "type": "git",
