--- a/api/package.json
+++ b/api/package.json
@@ -24,23 +24,26 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.4",
-    "fastify": "^1.9.0",
+    "eslint-config-standard": "^12.0.0",
+    "fastify": "^1.11.1",
     "fastify-compress": "^0.6.0",
     "fastify-formbody": "^2.0.1",
     "jsonwebtoken": "^8.3.0",
     "knex": "^0.15.2",
     "mysql2": "^1.6.1",
-    "objection": "^1.2.2",
+    "objection": "^1.2.6",
     "objection-password-bcryptjs": "^1.0.0-a",
     "objection-visibility": "^0.3.2",
     "randomstring": "^1.1.5",
     "request-ip": "^2.1.1",
-    "validator": "^10.6.0"
+    "validator": "^10.7.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-plugin-root-import": "^6.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-env": "^1.7.0"
+    "babel-preset-env": "^1.7.0",
+    "eslint-import-resolver-babel-root-import": "0.0.2",
+    "eslint-plugin-import": "^2.14.0"
   }
 }
