--- a/api/package.json
+++ b/api/package.json
@@ -42,9 +42,12 @@
     ],
     "plugins": [
       "transform-class-properties",
-      ["babel-plugin-root-import", {
-        "rootPathPrefix": "@"
-      }]
+      [
+        "babel-plugin-root-import",
+        {
+          "rootPathPrefix": "@"
+        }
+      ]
     ]
   }
 }
