--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "chalk": "^2.4.1",
     "cors": "^2.8.4",
     "fastify": "^1.13.0",
+    "knex": "^0.15.2",
+    "mysql2": "^1.6.4",
+    "objection": "^1.4.0",
     "veracious": "0.0.1"
   },
   "devDependencies": {
