--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
       [
         "@babel/preset-env",
         {
+          "targets": {
+            "node": "current"
+          },
           "useBuiltIns": "entry"
         }
       ]
