--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
     "build": "babel . --out-dir=production --copy-files --ignore node_modules"
   },
   "dependencies": {
+    "bcrypt": "^3.0.2",
     "chalk": "^2.4.1",
     "cors": "^2.8.4",
     "dotenv": "^6.1.0",
     "fastify": "^1.13.0",
+    "fastify-compress": "^0.7.1",
     "knex": "^0.15.2",
     "mysql2": "^1.6.4",
     "objection": "^1.4.0",
     "objection-visibility": "^0.3.2",
-    "veracious": "0.0.1"
+    "request-ip": "^2.1.3",
+    "veracious": "0.0.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
