--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^6.1.0",
     "fastify": "^1.13.0",
     "fastify-compress": "^0.7.1",
+    "jsonwebtoken": "^8.4.0",
     "knex": "^0.15.2",
     "mysql2": "^1.6.4",
     "objection": "^1.4.0",
