--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
-DB_HOST=localhost
+DB_HOST=localhostt
 DB_USER=root
-DB_PASS=password
+DB_PASS=
 DB_NAME=habbo
 
 HTTP_PORT=80
-HTTP_TYPE=1
 
-JWT_TOKEN=random
+RCON_HOST=127.0.0.1
+RCON_PORT=3001
+
+JWT_SECRET=lol
