--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-onclickoutside": "^6.7.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.2",
     "redux-zero": "^4.15.1"
