--- a/web/package.json
+++ b/web/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "^24.0.13",
-    "@types/node": "^12.0.7",
-    "@types/react": "^16.8.19",
+    "@types/jest": "^24.0.15",
+    "@types/node": "^12.0.8",
+    "@types/react": "^16.8.22",
     "@types/react-dom": "^16.8.4",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
@@ -14,7 +14,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.0",
     "redux-zero": "^5.0.4",
-    "typescript": "^3.5.1"
+    "typescript": "^3.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -26,20 +26,10 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  "browserslist": [],
   "devDependencies": {
-    "jest-enzyme": "^7.0.2"
+    "jest-enzyme": "^7.0.2",
+    "node-sass": "^4.12.0"
   },
   "jest": {
     "collectCoverageFrom": [
