--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "enzyme-adapter-react-16": "^1.14.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-onclickoutside": "^6.8.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.0",
     "redux-zero": "^5.0.4",
