--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "@types/react-dom": "^16.8.4",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-onclickoutside": "^6.8.0",
