--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,7 @@
     "@types/node": "^12.0.8",
     "@types/react": "^16.8.22",
     "@types/react-dom": "^16.8.4",
+    "@types/react-router": "^5.0.2",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "moment": "^2.24.0",
