--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,5 +19,6 @@ steps:
     npm install
     npm run build
     npm run test
-  displayName: 'npm install and build'
+  displayName: 'Build Project & Run Tests'
   workingDirectory: web
+
