--- a/api/package.json
+++ b/api/package.json
@@ -4,17 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/index.ts"
+    "start": "node -r ts-node/register src/main.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "prisma-client-lib": "^1.34.0"
+    "@types/express": "^4.17.0",
+    "dotenv": "^8.0.0",
+    "express": "^4.17.1",
+    "mysql2": "^1.6.5",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
+    "@types/node": "^12.6.3",
+    "@types/winston": "^2.4.4",
     "ts-node": "^8.3.0",
-    "typescript": "^3.5.2"
+    "typeorm": "^0.2.18",
+    "typescript": "^3.5.3"
   }
 }
