--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
    "description": "",
    "main": "index.js",
    "scripts": {
-      "start": "ts-node src/main.ts"
+      "start": "ts-node -r tsconfig-paths/register src/main.ts"
    },
    "keywords": [],
    "author": "",
@@ -14,17 +14,18 @@
       "bcryptjs": "^2.4.3",
       "dotenv": "^8.0.0",
       "express": "^4.17.1",
+      "jsonwebtoken": "^8.5.1",
+      "moment": "^2.24.0",
+      "mysql": "^2.14.1",
       "mysql2": "^1.6.5",
       "reflect-metadata": "^0.1.10",
-      "winston": "^3.2.1",
-      "typeorm": "0.2.18",
-      "mysql": "^2.14.1"
+      "typeorm": "0.2.18"
    },
    "devDependencies": {
       "@types/dotenv": "^6.1.1",
       "@types/node": "^8.0.29",
-      "@types/winston": "^2.4.4",
       "ts-node": "3.3.0",
+      "tsconfig-paths": "^3.8.0",
       "typeorm": "^0.2.18",
       "typescript": "3.3.3333"
    }
