--- a/api/package.json
+++ b/api/package.json
@@ -12,14 +12,23 @@
    "dependencies": {
       "@types/express": "^4.17.0",
       "bcryptjs": "^2.4.3",
+      "body-parser": "^1.19.0",
+      "compression": "^1.7.4",
+      "cookie-parser": "^1.4.4",
       "dotenv": "^8.0.0",
       "express": "^4.17.1",
       "jsonwebtoken": "^8.5.1",
+      "method-override": "^3.0.0",
       "moment": "^2.24.0",
       "mysql": "^2.14.1",
       "mysql2": "^1.6.5",
       "reflect-metadata": "^0.1.10",
-      "typeorm": "0.2.18"
+      "typeorm": "0.2.18",
+      "@tsed/common": "5.0.7",
+      "@tsed/di": "5.0.7",
+      "@tsed/core": "5.0.7",
+      "@tsed/swagger": "5.0.7",
+      "@tsed/testing": "5.0.7"
    },
    "devDependencies": {
       "@types/dotenv": "^6.1.1",
