--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "baseUrl": "./src",
     "target": "es6",
+    "lib": ["es2016"],
     "module": "commonjs",
     "moduleResolution": "node",
     "outDir": "./build",
