--- a/api/package.json
+++ b/api/package.json
@@ -10,9 +10,15 @@
    "author": "",
    "license": "ISC",
    "dependencies": {
+      "@tsed/common": "5.0.7",
+      "@tsed/core": "5.0.7",
+      "@tsed/di": "5.0.7",
+      "@tsed/swagger": "5.0.7",
+      "@tsed/testing": "5.0.7",
       "@types/express": "^4.17.0",
       "bcryptjs": "^2.4.3",
       "body-parser": "^1.19.0",
+      "class-validator": "^0.9.1",
       "compression": "^1.7.4",
       "cookie-parser": "^1.4.4",
       "dotenv": "^8.0.0",
@@ -23,12 +29,7 @@
       "mysql": "^2.14.1",
       "mysql2": "^1.6.5",
       "reflect-metadata": "^0.1.10",
-      "typeorm": "0.2.18",
-      "@tsed/common": "5.0.7",
-      "@tsed/di": "5.0.7",
-      "@tsed/core": "5.0.7",
-      "@tsed/swagger": "5.0.7",
-      "@tsed/testing": "5.0.7"
+      "typeorm": "0.2.18"
    },
    "devDependencies": {
       "@types/dotenv": "^6.1.1",
