--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,7 @@
     "@types/react": "^16.8.22",
     "@types/react-dom": "^16.8.4",
     "@types/react-router": "^5.0.2",
+    "axios": "^0.19.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "moment": "^2.24.0",
@@ -38,5 +39,6 @@
     "collectCoverageFrom": [
       "src/**/*.{ts,tsx}"
     ]
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
