--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
    "description": "",
    "main": "index.js",
    "scripts": {
-      "start": "ts-node -r tsconfig-paths/register src/main.ts"
+      "start": "ts-node -r tsconfig-paths/register src/main.ts",
+      "typeorm": ". config/typeorm && ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
    },
    "keywords": [],
    "author": "",
