--- a/api/package.json
+++ b/api/package.json
@@ -16,7 +16,10 @@
       "@tsed/di": "5.0.7",
       "@tsed/swagger": "5.0.7",
       "@tsed/testing": "5.0.7",
+      "@types/compression": "0.0.36",
+      "@types/cookie-parser": "^1.4.1",
       "@types/express": "^4.17.0",
+      "@types/method-override": "0.0.31",
       "bcryptjs": "^2.4.3",
       "body-parser": "^1.19.0",
       "class-validator": "^0.9.1",
