--- a/nest/package.json
+++ b/nest/package.json
@@ -18,14 +18,22 @@
   "dependencies": {
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.0.0",
-    "@nestjs/platform-express": "^6.0.0",
+    "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-fastify": "^6.5.3",
+    "@nestjs/typeorm": "^6.1.3",
+    "bcryptjs": "^2.4.3",
+    "class-validator": "^0.9.1",
+    "moment": "^2.24.0",
+    "mysql2": "^1.6.5",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
-    "rxjs": "^6.3.3"
+    "rxjs": "^6.3.3",
+    "typeorm": "^0.2.18"
   },
   "devDependencies": {
-    "@nestjs/testing": "^6.0.0",
+    "@nestjs/testing": "^6.5.3",
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.13",
     "@types/node": "^10.12.18",
