--- a/nest/package.json
+++ b/nest/package.json
@@ -22,14 +22,17 @@
     "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-fastify": "^6.5.3",
     "@nestjs/typeorm": "^6.1.3",
+    "@types/request-ip": "0.0.34",
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.9.1",
+    "js-sha256": "^0.9.0",
     "moment": "^2.24.0",
     "mysql2": "^1.6.5",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.12",
+    "request-ip": "^2.1.3",
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3",
     "typeorm": "^0.2.18"
