--- a/nest/package.json
+++ b/nest/package.json
@@ -25,6 +25,7 @@
     "@types/request-ip": "0.0.34",
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.9.1",
+    "dotenv": "^8.1.0",
     "js-sha256": "^0.9.0",
     "moment": "^2.24.0",
     "mysql2": "^1.6.5",
@@ -39,6 +40,7 @@
   },
   "devDependencies": {
     "@nestjs/testing": "^6.5.3",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.13",
     "@types/node": "^10.12.18",
