--- a/nest/package.json
+++ b/nest/package.json
@@ -3,11 +3,12 @@
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
     "format": "prettier --write \"src/**/*.ts\"",
-    "start": "ts-node -r tsconfig-paths/register src/main.ts",
-    "start:dev": "nodemon",
-    "start:debug": "nodemon --config nodemon-debug.json",
+    "start": ". env/typeorm && ts-node -r tsconfig-paths/register src/main.ts",
+    "start:dev": ". env/typeorm && nodemon",
+    "start:debug": ". env/typeorm && nodemon --config nodemon-debug.json",
+    "typeorm": ". env/typeorm && ts-node ./node_modules/typeorm/cli.js",
     "prestart:prod": "rimraf dist && npm run build",
-    "start:prod": "node dist/main.js",
+    "start:prod": ". env/typeorm && node dist/main.js",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "test": "jest",
     "test:watch": "jest --watch",
