--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "react-onclickoutside": "^6.8.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.0",
+    "react-toastify": "^5.3.2",
     "redux-zero": "^5.0.4",
     "typescript": "^3.5.2"
   },
