--- a/nest/package.json
+++ b/nest/package.json
@@ -17,44 +17,45 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^6.0.0",
-    "@nestjs/core": "^6.0.0",
+    "@nestjs/common": "^6.6.7",
+    "@nestjs/core": "^6.6.7",
     "@nestjs/jwt": "^6.1.1",
     "@nestjs/passport": "^6.1.0",
-    "@nestjs/platform-fastify": "^6.5.3",
+    "@nestjs/platform-fastify": "^6.6.7",
     "@nestjs/typeorm": "^6.1.3",
+    "@types/bcryptjs": "^2.4.2",
     "@types/request-ip": "0.0.34",
     "bcryptjs": "^2.4.3",
-    "class-validator": "^0.9.1",
+    "class-validator": "^0.10.0",
     "dotenv": "^8.1.0",
     "js-sha256": "^0.9.0",
     "moment": "^2.24.0",
-    "mysql2": "^1.6.5",
+    "mysql2": "^1.7.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "reflect-metadata": "^0.1.12",
+    "reflect-metadata": "^0.1.13",
     "request-ip": "^2.1.3",
-    "rimraf": "^2.6.2",
-    "rxjs": "^6.3.3",
-    "typeorm": "^0.2.18"
+    "rimraf": "^3.0.0",
+    "rxjs": "^6.5.3",
+    "typeorm": "^0.2.19"
   },
   "devDependencies": {
-    "@nestjs/testing": "^6.5.3",
+    "@nestjs/testing": "^6.6.7",
     "@types/dotenv": "^6.1.1",
-    "@types/express": "^4.16.0",
-    "@types/jest": "^23.3.13",
-    "@types/node": "^10.12.18",
-    "@types/supertest": "^2.0.7",
-    "jest": "^24.8.0",
-    "nodemon": "^1.18.9",
-    "prettier": "^1.15.3",
-    "supertest": "^3.4.1",
-    "ts-jest": "^23.10.5",
-    "ts-node": "^7.0.1",
-    "tsconfig-paths": "^3.7.0",
-    "tslint": "5.12.1",
-    "typescript": "^3.2.4"
+    "@types/express": "^4.17.1",
+    "@types/jest": "^24.0.18",
+    "@types/node": "^12.7.5",
+    "@types/supertest": "^2.0.8",
+    "jest": "^24.9.0",
+    "nodemon": "^1.19.2",
+    "prettier": "^1.18.2",
+    "supertest": "^4.0.2",
+    "ts-jest": "^24.1.0",
+    "ts-node": "^8.3.0",
+    "tsconfig-paths": "^3.9.0",
+    "tslint": "5.20.0",
+    "typescript": "^3.6.3"
   },
   "jest": {
     "moduleFileExtensions": [
