--- a/nest/package.json
+++ b/nest/package.json
@@ -24,11 +24,13 @@
     "@nestjs/platform-fastify": "^6.6.7",
     "@nestjs/typeorm": "^6.1.3",
     "@types/bcryptjs": "^2.4.2",
+    "@types/faker": "^4.1.5",
     "@types/lodash": "^4.14.138",
     "@types/request-ip": "0.0.34",
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.10.0",
     "dotenv": "^8.1.0",
+    "faker": "^4.1.0",
     "js-sha256": "^0.9.0",
     "moment": "^2.24.0",
     "mysql2": "^1.7.0",
